[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/screens/World.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/GUI/Popup/PopupDialog.gd" type="Script" id=3]
[ext_resource path="res://scripts/GUI/Popup/ConfirmationDialog.gd" type="Script" id=4]
[ext_resource path="res://scripts/Panel.gd" type="Script" id=5]
[ext_resource path="res://scripts/GUI/Popup/PopupItems.gd" type="Script" id=6]
[ext_resource path="res://assets/instrumentos_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/elements_icon.png" type="Texture" id=8]
[ext_resource path="res://scripts/GUI/PanelElements.gd" type="Script" id=9]
[ext_resource path="res://scripts/GUI/Popup/PopupElements.gd" type="Script" id=10]
[ext_resource path="res://scripts/GUI/Buttons/InfoButton.gd" type="Script" id=11]
[ext_resource path="res://scripts/GUI/Popup/PopupActivity.gd" type="Script" id=12]
[ext_resource path="res://scripts/GUI/Buttons/ProfileButton.gd" type="Script" id=13]
[ext_resource path="res://scripts/GUI/Popup/ConfirmationDialog2.gd" type="Script" id=14]
[ext_resource path="res://scripts/GUI/Popup/PopupDialogWrong.gd" type="Script" id=15]
[ext_resource path="res://scripts/GUI/PanelElements2.gd" type="Script" id=16]
[ext_resource path="res://scenes/Recipiente2.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/GUI/Popup/PourSubstanceDialog.gd" type="Script" id=18]
[ext_resource path="res://scenes/TrashCan.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.4286, 20 )

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.3681, 52.356 )

[sub_resource type="GDScript" id=5]
script/source = "extends ItemList

#Se puede borrar este script

#Override
func item_selected(index):
	print(\"Entre\")
	Global_ItemDatabase.show_data(Global_ItemDatabase.get_item(index))
	.item_selected(index)
"

[sub_resource type="StreamTexture" id=6]
flags = 4

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Enviroment" type="Node" parent="."]
editor/display_folded = true

[node name="floor" type="StaticBody2D" parent="Enviroment"]
editor/display_folded = true
position = Vector2( 493.113, 612.942 )
scale = Vector2( 16.2813, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/floor"]
position = Vector2( 1.14285, 4 )
scale = Vector2( 1.018, 1.6 )
shape = SubResource( 2 )

[node name="table" type="Sprite" parent="Enviroment/floor"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.14285, 4 )
texture = ExtResource( 2 )

[node name="floor4" type="StaticBody2D" parent="Enviroment"]
editor/display_folded = true
position = Vector2( 508.706, -17.0598 )
scale = Vector2( 16.2813, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="table" type="Sprite" parent="Enviroment/floor4"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.14285, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/floor4"]
position = Vector2( 1.14285, 4 )
scale = Vector2( 1.018, 1.6 )
shape = SubResource( 2 )

[node name="floor2" type="StaticBody2D" parent="Enviroment"]
editor/display_folded = true
position = Vector2( 1044.8, 296.348 )
rotation = 1.5708
scale = Vector2( 9.63113, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="table" type="Sprite" parent="Enviroment/floor2"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.14285, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/floor2"]
position = Vector2( 1.14285, 4 )
scale = Vector2( 1.018, 1.6 )
shape = SubResource( 2 )

[node name="floor3" type="StaticBody2D" parent="Enviroment"]
editor/display_folded = true
position = Vector2( -16.9321, 292.593 )
rotation = 1.5708
scale = Vector2( 9.63113, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="table" type="Sprite" parent="Enviroment/floor3"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.14285, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/floor3"]
position = Vector2( 1.14285, 4 )
scale = Vector2( 1.018, 1.6 )
shape = SubResource( 2 )

[node name="table" type="StaticBody2D" parent="Enviroment"]
modulate = Color( 0.945313, 0.727448, 0.727448, 1 )
material = SubResource( 3 )
position = Vector2( 480, 450 )
scale = Vector2( 8, 1.1875 )
__meta__ = {
"_edit_lock_": true
}

[node name="table" type="Sprite" parent="Enviroment/table"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.14285, 4 )
texture = ExtResource( 2 )

[node name="legs" type="Sprite" parent="Enviroment/table"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -20, 80 )
scale = Vector2( 0.0902724, 1.5 )
texture = ExtResource( 2 )

[node name="legs2" type="Sprite" parent="Enviroment/table"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 20, 80 )
scale = Vector2( 0.0902724, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/table"]
visible = false
position = Vector2( 1.14285, 4 )
scale = Vector2( 1.018, 1.6 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Enviroment/table"]
visible = false
position = Vector2( -19.9516, 79.7887 )
scale = Vector2( 0.125, 0.842105 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Enviroment/table"]
visible = false
position = Vector2( 19.8799, 79.7887 )
scale = Vector2( 0.125, 0.842105 )
shape = SubResource( 4 )

[node name="PopupDialog" type="PopupDialog" parent="."]
editor/display_folded = true
margin_right = 80.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
window_title = "Por favor, Confirma..."
script = ExtResource( 4 )

[node name="ToolsPanel" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 97.0
margin_top = 10.0
margin_right = 937.0
margin_bottom = 109.0
script = ExtResource( 5 )

[node name="ItemList" type="ItemList" parent="ToolsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -382.0
margin_top = -30.5
margin_right = 379.0
margin_bottom = 29.5
custom_constants/vseparation = 30
custom_constants/line_separation = 30
custom_constants/hseparation = 30
script = SubResource( 5 )

[node name="PopupItems" type="PopupDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -66.0
margin_right = 144.0
margin_bottom = 62.0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="PopupItems"]
margin_left = 13.0
margin_top = 12.0
margin_right = 270.0
margin_bottom = 117.0

[node name="ToolsButton" type="TextureButton" parent="."]
margin_left = 25.0
margin_top = 33.0
margin_right = 65.0
margin_bottom = 73.0
texture_normal = ExtResource( 7 )

[node name="ElementsButton" type="TextureButton" parent="."]
margin_left = 950.0
margin_top = 27.0
margin_right = 1078.0
margin_bottom = 155.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 8 )

[node name="PanelElements" type="Panel" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 11.0
margin_right = -87.0
margin_bottom = -484.0
script = ExtResource( 9 )

[node name="ElementsList" type="ItemList" parent="PanelElements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -402.5
margin_top = -34.5
margin_right = 402.5
margin_bottom = 34.5

[node name="PopupElements" type="PopupDialog" parent="."]
editor/display_folded = true
margin_right = 233.0
margin_bottom = 118.0
script = ExtResource( 10 )

[node name="Label" type="Label" parent="PopupElements"]
visible = false
margin_left = 15.0
margin_top = 12.0
margin_right = 205.0
margin_bottom = 90.0

[node name="InfoButton" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 14.0
margin_top = 540.0
margin_right = 62.0
margin_bottom = 588.0
texture_normal = SubResource( 6 )
script = ExtResource( 11 )

[node name="PopupActivity" type="PopupDialog" parent="InfoButton"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -354.0
margin_right = 197.0
margin_bottom = -65.0
script = ExtResource( 12 )

[node name="Label" type="Label" parent="InfoButton/PopupActivity"]
visible = false
margin_left = 11.0
margin_top = 9.0
margin_right = 51.0
margin_bottom = 23.0

[node name="Profile" type="TextureButton" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -64.0
margin_right = -1.0
texture_normal = ExtResource( 2 )
script = ExtResource( 13 )

[node name="PopupActivity" type="PopupDialog" parent="Profile"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -354.0
margin_right = 197.0
margin_bottom = -65.0
script = ExtResource( 12 )

[node name="Label" type="Label" parent="Profile/PopupActivity"]
visible = false
margin_left = 11.0
margin_top = 9.0
margin_right = 51.0
margin_bottom = 23.0

[node name="ConfirmationDialog2" type="ConfirmationDialog" parent="."]
pause_mode = 2
editor/display_folded = true
margin_left = 303.0
margin_top = 70.0
margin_right = 682.0
margin_bottom = 213.0
popup_exclusive = true
window_title = "Por favor, Confirma..."
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="ConfirmationDialog2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 371.0
margin_bottom = 107.0

[node name="Label2" type="Label" parent="ConfirmationDialog2/Panel"]
margin_left = 7.0
margin_top = 20.0
margin_right = 130.0
margin_bottom = 34.0
text = "Cantidad de H2SO4:"

[node name="Label3" type="Label" parent="ConfirmationDialog2/Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 16.0
text = "Cantidad de Fe(OH)2:"

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog2/Panel"]
margin_left = 203.0
margin_top = 12.0
margin_right = 261.0
margin_bottom = 36.0

[node name="LineEdit2" type="LineEdit" parent="ConfirmationDialog2/Panel"]
margin_left = 204.0
margin_top = 49.0
margin_right = 263.0
margin_bottom = 73.0

[node name="Label2" type="Label" parent="ConfirmationDialog2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 371.0
margin_bottom = 107.0

[node name="PopupDialogWrongAnswer" type="PopupDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -166.0
margin_right = 127.0
margin_bottom = -102.0
script = ExtResource( 15 )

[node name="Label" type="Label" parent="PopupDialogWrongAnswer"]
anchor_top = 0.5
anchor_right = 0.04
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -7.0
margin_right = 27.6
margin_bottom = 7.0

[node name="PanelElements2" type="Panel" parent="."]
margin_left = 164.0
margin_top = 21.0
margin_right = 884.0
margin_bottom = 121.0
script = ExtResource( 16 )

[node name="Button" type="Button" parent="PanelElements2"]
margin_right = 180.0
margin_bottom = 20.0
text = "Mixture"

[node name="Button2" type="Button" parent="PanelElements2"]
margin_left = 180.0
margin_right = 360.0
margin_bottom = 20.0
text = "Solid"

[node name="Button3" type="Button" parent="PanelElements2"]
margin_left = 360.0
margin_right = 540.0
margin_bottom = 20.0
text = "Liquid"

[node name="Button4" type="Button" parent="PanelElements2"]
margin_left = 540.0
margin_right = 720.0
margin_bottom = 20.0
text = "Gas"

[node name="ElementsList" type="ItemList" parent="PanelElements2"]
margin_left = 12.0
margin_top = 27.0
margin_right = 709.0
margin_bottom = 92.0

[node name="Recipiente2" parent="." instance=ExtResource( 17 )]
position = Vector2( 666.296, 364.385 )
scale = Vector2( 0.3, 0.3 )

[node name="PourSubstanceDialog" type="ConfirmationDialog" parent="."]
pause_mode = 2
editor/display_folded = true
margin_left = 36.0
margin_top = 180.0
margin_right = 409.0
margin_bottom = 309.0
popup_exclusive = true
window_title = "Por favor, Confirma..."
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="PourSubstanceDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 365.0
margin_bottom = 93.0
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PourSubstanceDialog/Panel"]
margin_right = 66.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="PourSubstanceDialog/Panel/VBoxContainer"]
margin_top = 4.0
margin_right = 66.0
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="PourSubstanceDialog/Panel/VBoxContainer"]
margin_top = 22.0
margin_right = 66.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="PourSubstanceDialog/Panel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_bottom = 19.0

[node name="LineEdit" type="LineEdit" parent="PourSubstanceDialog/Panel/VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 62.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="PourSubstanceDialog/Panel/VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0

[node name="OverwhelmedRecipientePopup" type="PopupDialog" parent="."]
editor/display_folded = true
margin_left = 102.0
margin_top = 146.0
margin_right = 335.0
margin_bottom = 240.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="OverwhelmedRecipientePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -38.0
margin_right = 94.0
margin_bottom = 38.0

[node name="TrashCan" parent="." instance=ExtResource( 19 )]
position = Vector2( 885.661, 572.764 )
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="item_selected" from="ToolsPanel/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="ToolsButton" to="." method="_on_ToolsButton_pressed"]
[connection signal="pressed" from="ElementsButton" to="." method="_on_ElementsButton_pressed"]
[connection signal="item_selected" from="PanelElements/ElementsList" to="." method="_on_ElementsList_item_selected"]
[connection signal="confirmed" from="ConfirmationDialog2" to="." method="_on_ConfirmationDialog2_confirmed"]
[connection signal="hide" from="ConfirmationDialog2" to="." method="_on_ConfirmationDialog2_hide"]
[connection signal="pressed" from="PanelElements2/Button" to="PanelElements2" method="_on_Button_pressed"]
[connection signal="pressed" from="PanelElements2/Button2" to="PanelElements2" method="_on_Button2_pressed"]
[connection signal="pressed" from="PanelElements2/Button3" to="PanelElements2" method="_on_Button3_pressed"]
[connection signal="pressed" from="PanelElements2/Button4" to="PanelElements2" method="_on_Button4_pressed"]
[connection signal="item_selected" from="PanelElements2/ElementsList" to="." method="_on_ElementsList_item_selected"]
[connection signal="hit" from="Recipiente2" to="." method="_on_Recipiente2_hit"]
[connection signal="overwhelmed" from="Recipiente2" to="." method="_on_Recipiente2_overwhelmed"]
[connection signal="confirmed" from="PourSubstanceDialog" to="." method="_on_PourSubstanceDialog_confirmed"]
[connection signal="hide" from="PourSubstanceDialog" to="." method="_on_PourSubstanceDialog_hide"]
